# OOPPO

./: .gitignore  AZ_run_memcached.sh  AZ_run_proxy_datanode.sh  Progess.md  Readme.md  autoall.sh  clean.sh  exp.sh  experiment1.sh  experiment1_flat.sh  experiment2.sh  experiment2_flat.sh  experiment3.sh  experiment3_flat.sh  experiment4.sh  experiment4_more.sh  gitadd.sh  handmade_run_memcached.sh  install_asio.sh  install_grpc.sh  install_libmemcached.sh  install_third_party.sh  install_third_party_offline.sh  kill_all.sh  kill_memcached_proxy_datanode.sh  limit_bandwidht.sh  proxy_datanode_log.txt  readme.md  run_memcached.sh  run_pd.sh  run_proxy_datanode.sh  run_rmw.sh  single_done.sh  update.drawio  update_libmemcached.sh  函数功能细表.md  进度文档.md
oppo_project/: CMakeLists.txt  compile.sh  compile_without_thirdp.sh  run_client.cpp  run_coordinator.cpp  run_datanode.cpp  run_proxy.cpp  test.result  test_tools.cpp
oppo_project/config/: AZInformation.xml
oppo_project/include/: azure_lrc.h  client.h  coordinator.h  datanode.h  devcommon.h  logmanager.h  meta_definition.h  proxy.h  run_rmw.h  toolbox.h  zipf.h
oppo_project/run_cpp/: run_client.cpp  run_coordinator.cpp  run_datanode.cpp  run_proxy.cpp  run_rmw.cpp  test_16MB_8_4_3_Best.cpp  test_16MB_8_4_3_Best_Best.cpp  test_16MB_8_4_3_Best_Best_Best.cpp  test_16MB_8_4_3_Random.cpp  test_32MB_8_4_3_Best.cpp  test_32MB_8_4_3_Best_Best.cpp  test_32MB_8_4_3_Best_Best_Best.cpp  test_32MB_8_4_3_Random.cpp  test_4MB_8_4_3_Best.cpp  test_4MB_8_4_3_Best_Best.cpp  test_4MB_8_4_3_Best_Best_Best.cpp  test_4MB_8_4_3_Random.cpp  test_8MB_8_4_3_Best.cpp  test_8MB_8_4_3_Best_Best.cpp  test_8MB_8_4_3_Best_Best_Best.cpp  test_8MB_8_4_3_Random.cpp  test_bias.cpp  test_tools.cpp
oppo_project/src/: ToolBox.cpp  azure_lrc.cpp  client.cpp  coordinator.cpp  datanode.cpp  logmanager.cpp  proxy.cpp
oppo_project/src/libmemcached-1.0.18/: Makefile  Makefile.in  aclocal.m4  aminclude.am  config.status  configure  configure.ac  configure~  libtool  mem_config.h  mem_config.in
oppo_project/src/libmemcached-1.0.18/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
oppo_project/src/libmemcached-1.0.18/clients/: memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memflush.cc  memparse  memping  memrm  memslap  memstat  memtouch
oppo_project/src/libmemcached-1.0.18/libmemcached/: get.cc  storage.cc
oppo_project/src/libmemcached-1.0.18/libmemcached-1.0/: get.h  storage.h
oppo_project/src/libmemcached-1.0.18/libtest/: abort  backtrace  core-count  skiptest  unittest  wait
oppo_project/src/libmemcached-1.0.18/support/: libmemcached.pc
oppo_project/src/libmemcached-1.0.18/tests/: atomsmasher  cycle  failure  hash_plus  memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memping  memrm  memslap  memstat  memtouch  parser  testhashkit  testplus  testudp
oppo_project/src/memcached-1.6.17/: Makefile  Makefile.in  aclocal.m4  assoc.gcda  assoc.gcno  authfile.gcda  authfile.gcno  base64.gcda  base64.gcno  bipbuffer.gcda  bipbuffer.gcno  cache.gcda  cache.gcno  config.h  config.h.in  config.status  configure  configure~  crawler.gcda  crawler.gcno  crc32c.gcda  crc32c.gcno  daemon.gcda  daemon.gcno  extstore.gcda  extstore.gcno  hash.gcda  hash.gcno  items.gcda  items.gcno  itoa_ljust.gcda  itoa_ljust.gcno  jenkins_hash.gcda  jenkins_hash.gcno  logger.gcda  logger.gcno  memcached  memcached-debug  memcached.gcda  memcached.gcno  (+51 more)
oppo_project/src/memcached-1.6.17/.deps/: cache.Po  crc32c.Po  jenkins_hash.Po  memcached-assoc.Po  memcached-authfile.Po  memcached-base64.Po  memcached-bipbuffer.Po  memcached-cache.Po  memcached-crawler.Po  memcached-crc32c.Po  memcached-daemon.Po  memcached-extstore.Po  memcached-hash.Po  memcached-items.Po  memcached-itoa_ljust.Po  memcached-jenkins_hash.Po  memcached-logger.Po  memcached-memcached.Po  memcached-murmur3_hash.Po  memcached-proto_bin.Po  memcached-proto_text.Po  memcached-restart.Po  memcached-slab_automove.Po  memcached-slab_automove_extstore.Po  memcached-slabs.Po  memcached-stats_prefix.Po  memcached-storage.Po  memcached-thread.Po  memcached-util.Po  memcached_debug-assoc.Po  memcached_debug-authfile.Po  memcached_debug-base64.Po  memcached_debug-bipbuffer.Po  memcached_debug-cache.Po  memcached_debug-crawler.Po  memcached_debug-crc32c.Po  memcached_debug-daemon.Po  memcached_debug-extstore.Po  memcached_debug-hash.Po  memcached_debug-items.Po  (+21 more)
oppo_project/src/memcached-1.6.17/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
oppo_project/src/proto/: coordinator.grpc.pb.cc  coordinator.grpc.pb.h  coordinator.pb.cc  coordinator.pb.h  coordinator.proto  proxy.grpc.pb.cc  proxy.grpc.pb.h  proxy.pb.cc  proxy.pb.h  proxy.proto
oppo_project/src/wxh/: temp.cpp
(+655 files in other folders)
